--- a/site/package.json
+++ b/site/package.json
@@ -17,9 +17,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "react": "^18.2.0",
+    "react-audio-visualize": "^1.1.3",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "react-sound-visualizer": "^1.1.1",
+    "sound-visualizer": "^1.2.0",
     "vite-plugin-singlefile": "^0.13.5"
   },
   "devDependencies": {
