--- a/site/package.json
+++ b/site/package.json
@@ -32,7 +32,12 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "http-server": "^14.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
